<resources>
    <string name="app_name">Sarvar M</string>
    <string name="action_settings">Настройки</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Пользователи</string>
    <string name="second_fragment_label">Добавление пользователя</string>
    <string name="fragment_put2_label">Изменения пользователя</string>
    <string name="next">Поиск по Id</string>
    <string name="save_post">Добавление пользователя</string>
    <string name="put_post">Изменения пользователя</string>

    <string name="lorem_ipsum">
        Загрузка ...
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_get_one_label">Поиск по Id</string>
    <string name="login">Войти</string>
</resources>