<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp">

        <Button
            android:id="@+id/button_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_fragment_label" />

        <Button
            android:id="@+id/button_get_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next" />

        <Button
            android:id="@+id/button_first2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_post" />

        <Button
            android:id="@+id/button_first3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/put_post" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/result_text">
        </TextView>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>