<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    android:label="@string/fragment_put2_label"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="tj.navin.test.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment2"
            app:destination="@id/SecondFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_PutFragment"
            app:destination="@id/putFragment" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="tj.navin.test.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/putFragment"
        android:name="tj.navin.test.PutFragment"
        android:label="@string/fragment_put2_label"
        tools:layout="@layout/fragment_put2" />
</navigation>